# Signals-and-Sentiment

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  scheduler.py
.github/: dependabot.yml
.github/workflows/: ci.yml
data/: aliases.json  global_mapping.json  reddit_aliases.json  sectors.json
grafana/dashboards/: ptt-signals.json
grafana/provisioning/alerting/: alerts.yml
grafana/provisioning/dashboards/: dashboards.yml
grafana/provisioning/datasources/: influxdb.yml
llm_agent/: __init__.py  annotator.py  config.py  explainer.py  monitor.py
ptt_scraper/: __init__.py  buzz.py  config.py  contrarian.py  entity_mapping.py  feed.py  scraper.py  sectors.py  sentiment.py  store.py
reddit_scraper/: __init__.py  config.py  entity_mapping.py  scraper.py  sentiment.py
tests/: test_benchmark.py  test_buzz.py  test_contrarian.py  test_env_validation.py  test_feed.py  test_main.py  test_ptt_entity_mapping.py  test_ptt_feed.py  test_ptt_scraper.py  test_ptt_sentiment.py  test_reddit_entity_mapping.py  test_reddit_scraper.py  test_reddit_sentiment.py  test_retry.py  test_sectors.py  test_store.py
