[project]
name = "signals-and-sentiment"
version = "1.0.0"
requires-python = ">=3.11"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", "venv", "build", "dist", "__pycache__"]

[tool.pylint.main]
disable = [
    "C0114",  # missing-module-docstring (已有中文 docstring)
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods (dataclass)
    "W1203",  # logging-fstring-interpolation
]
max-line-length = 100
good-names = ["i", "f", "p", "s", "c", "e", "r", "t", "h"]

[tool.pylint.format]
max-line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
